syntax = "proto3";

package document;

service DocumentService {
  rpc CreateDocument(CreateDocumentRequest) returns (CreateDocumentResponse) {}
  rpc GetDocument(GetDocumentRequest) returns (GetDocumentResponse) {}
  rpc UpdateDocument(UpdateDocumentRequest) returns (UpdateDocumentResponse) {}
  rpc DeleteDocument(DeleteDocumentRequest) returns (DeleteDocumentResponse) {}
}

message CreateDocumentRequest {
  string title = 1;
  string content = 2;
}

message CreateDocumentResponse {
  bool success = 1;
  string message = 2;
  string document_id = 3;
}

message GetDocumentRequest {
  string document_id = 1;
}

message GetDocumentResponse {
  bool success = 1;
  string message = 2;
  string title = 3;
  string content = 4;
}

message UpdateDocumentRequest {
  string document_id = 1;
  string title = 2;
  string content = 3;
}

message UpdateDocumentResponse {
  bool success = 1;
  string message = 2;
}

message DeleteDocumentRequest {
  string document_id = 1;
}

message DeleteDocumentResponse {
  bool success = 1;
  string message = 2;
}
