package document

import (
	"context"

	pb "github.com/Nazerkh09/jaz/dev_microservice2/api/document"
)

type DocumentService struct{}

func NewDocumentService() *DocumentService {
	return &DocumentService{}
}

func (s *DocumentService) CreateDocument(ctx context.Context, req *pb.CreateDocumentRequest) (*pb.CreateDocumentResponse, error) {
	// Implementation logic for creating a document
	return &pb.CreateDocumentResponse{
		Success:    true,
		Message:    "Document created successfully",
		DocumentId: "sample-document-id",
	}, nil
}

func (s *DocumentService) GetDocument(ctx context.Context, req *pb.GetDocumentRequest) (*pb.GetDocumentResponse, error) {
	// Implementation logic for retrieving a document
	return &pb.GetDocumentResponse{
		Success: true,
		Message: "Document retrieved successfully",
		Title:   "Sample Document",
		Content: "Sample content of the document",
	}, nil
}

func (s *DocumentService) UpdateDocument(ctx context.Context, req *pb.UpdateDocumentRequest) (*pb.UpdateDocumentResponse, error) {
	// Implementation logic for updating a document
	return &pb.UpdateDocumentResponse{
		Success: true,
		Message: "Document updated successfully",
	}, nil
}

func (s *DocumentService) DeleteDocument(ctx context.Context, req *pb.DeleteDocumentRequest) (*pb.DeleteDocumentResponse, error) {
	// Implementation logic for deleting a document
	return &pb.DeleteDocumentResponse{
		Success: true,
		Message: "Document deleted successfully",
	}, nil
}
